--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
+    "axios": "^1.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.4",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-card-flip": "^1.1.5",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
+    "rxjs": "^7.5.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.24.0",
